# cec2mqtt

./: .gitignore  README.md  requirements.txt  setup.cfg
cec2mqtt/: bridge.py  cec_client.py  version.py
cec2mqtt/config/: __init__.py  default.yaml
