[metadata]
name = cecmqtt
version = 0.2.0
author = Michaël Arnauts
author-email = lad1337@gmail.com
summary = A HDMI-CEC / IR to MQTT bridge for connecting your AV-devices to your Home Automation system.
home-page = https://github.com/michaelarnauts/cec-mqtt-bridge
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries


[entry_points]
console_scripts =
    cec-mqtt = cecmqtt.bridge:main
